--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
   </title>
   <meta content="ecommerce website we deliver products in 1 hours" name="description">
   <meta content="ecommerce" name="amazon,flipkart,selling,products">
+  <link rel="icon" href="{% static 'images/logo1.png' %}">
 
 
 
@@ -214,6 +215,7 @@
 
   <!-- Template Main JS File -->
   <script src="{% static '/assets/js/main.js' %}"></script>
+  <script src="{% static 'assets/js/cart.js' %}"></script>
 
 </body>
 
